@@ -1,0 +1,12 @@
+                    |-----handy-ruler------------------------------------------------------|
+mozilla-firefox-l10n: mozilla-firefox-l10n (Firefox translations)
+mozilla-firefox-l10n:
+mozilla-firefox-l10n: Language files for Mozilla Firefox.
+mozilla-firefox-l10n: 
+mozilla-firefox-l10n: 
+mozilla-firefox-l10n: 
+mozilla-firefox-l10n: 
+mozilla-firefox-l10n:
+mozilla-firefox-l10n: 
+mozilla-firefox-l10n:
+mozilla-firefox-l10n: Package created by Niki Kovacs <info@microlinux.fr>
