@@ -1,0 +1,12 @@
+               |-----handy-ruler------------------------------------------------------|
+mozilla-firefox: mozilla-firefox (Mozilla Firefox Web browser)
+mozilla-firefox:
+mozilla-firefox: Mozilla Firefox ESR (Extended Support Release) is meant for
+mozilla-firefox: organizations that manage their client desktops, including schools,
+mozilla-firefox: businesses and other institutions that want to offer Firefox.
+mozilla-firefox: 
+mozilla-firefox:
+mozilla-firefox: 
+mozilla-firefox: 
+mozilla-firefox:
+mozilla-firefox: Package created by Niki Kovacs <info@microlinux.fr>
