@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':' except on otherwise blank lines.
+
+                     |-----handy-ruler------------------------------------------------------|
+user-settings-firefox: user-settings-firefox (Firefox defaults)
+user-settings-firefox:
+user-settings-firefox: Default settings for Mozilla Firefox.
+user-settings-firefox: 
+user-settings-firefox: - Paper size defaults to A4.
+user-settings-firefox: - Download manager asks where to download files and closes when 
+user-settings-firefox:   finished.
+user-settings-firefox: - Disable confusing plugin security alert.
+user-settings-firefox: 
+user-settings-firefox:
+user-settings-firefox: Package created by Niki Kovacs (http://www.microlinux.fr)
