@@ -1,0 +1,9 @@
+// Default paper size is A4
+pref("print.postscript.paper_size", "A4");
+// Always ask where to download stuff
+pref("browser.download.useDownloadDir", false);
+// Close download manager when finished
+pref("browser.download.manager.closeWhenDone", true);
+// Disable confusing plugin security alert
+pref("extensions.blocklist.enabled", false);
+
